Placeholder. Under construction website

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Jack Papel</title>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <main>
-    <h1><marquee>Jack Papel</marquee></h1>
+    <!-- <div class = "buttons_holder"></div> -->
+    <header class = "jack_papel">
+      <h1> 
+        Jack Papel
+      </h1>
+    </header>
+    <section class = "about">
+      <div class = "center">
+        <h2>Under Construction</h2>
+        <p>This website is under construction. <br>
+          In the meantime, here's a link to my 
+          <a href="https://www.linkedin.com/in/jackpapel/">Linkedin</a>
+          and one to my <a href="https://www.github.com/jack-papel">Github.</a>
+        </p>
+      </div>
+    </section>
+    <section class = "my-stuff">
+    </section>
+    <script></script>
   </main>
 </body>
 
