Continue renovations. Complete styling, add online playground for mlang

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
       </div>
       <div class='cards'>
-        <article id='website-card'>
+        <article id='website-card' style='--weight: 0.8' href='https://github.com/Jack-Papel/jackpapel-com'>
           <header>
             <h1>This website</h1>
           </header>
@@ -67,7 +67,7 @@
           </div>
           <footer>HTML &bull; CSS &bull; JS &bull; Github Actions</footer>
         </article>
-        <article id='mafia-card' onclick="window.open('https://mafia.mom', '_blank')">
+        <article id='mafia-card' href='https://mafia.mom'>
           <header>
             <h1>Mafia</h1>
           </header>
@@ -77,7 +77,7 @@
           </div>
           <footer>Rust Backend &bull; Websockets &bull; Frontend &bull; TS &bull; React &bull; Github Actions</footer>
         </article>
-        <article id='mlang-card' onclick='window.open("https://github.com/Jack-Papel/mlang", "_blank")'>
+        <article id='mlang-card' href='mlang-online-playground/'>
           <header>
             <h1>Mlang</h1>
           </header>
@@ -88,7 +88,7 @@
           </div>
           <footer>Rust &bull; ASTs &bull; Token Parsing &bull; Yew &bull; WebAssembly &bull; HTML &bull; CSS </footer>
         </article>
-        <article id='critical-shears-card'>
+        <article id='critical-shears-card' style='--weight: 0.3'>
           <header>
             <h1>Critical Shears</h1>
           </header>
