--- a/index.html
+++ b/index.html
@@ -109,23 +109,17 @@
         </article>
       </div>
     </section>
-    <section id='resume'>
-      <div class='center split-pane'>
-        <header>
-          <h2>Skills</h2>
-        </header>
-        <article>
-          <h2>These are my skills, yo!</h2>
-          <ul>
-            <li>Me being epic</li>
-            <li>Fornite</li>
-            <li>Gaming</li>
-            <li>Codeing</li>
-            <li>Codeing</li>
-            <li>Codeing</li>
-            <li>Codeing</li>
-          </ul>
-        </article>
+    <section id='under-construction'>
+      <div class='center'>
+        <h2>
+          Under Construction
+        </h2>
+        <p>
+          This website is still under construction. Information about my experience and skills, 
+          as well as contact information will be added in the future. For now, you can visit my
+          <a href='https://www.linkedin.com/in/jackpapel/'>LinkedIn</a> or my
+          <a href='https://www.github.com/jack-papel'>Github</a>.
+        </p>
       </div>
     </section>
   </main>
