Improve mobile support, clean up rough edges

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <li><a href='#jack-papel'>Links</a></li>
       <li><a href='#about'>About</a></li>
       <li><a href='#portfolio'>Portfolio</a></li>
-      <li><a href='#resume'>Skills</a></li>
-      <li><a href='#contact'>Contact</a></li>
+      <li><a href='#under-construction'>Skills</a></li>
+      <li><a href='#under-construction'>Contact</a></li>
     </ul>
   </nav>
   <main>
@@ -37,7 +37,6 @@
           <ul>
             <li><a href='https://www.linkedin.com/in/jackpapel/'>LinkedIn</a></li>
             <li><a href='https://www.github.com/jack-papel'>Github</a></li>
-            <li><a>Something</a></li>
           </ul>
         </nav>
       </div>
@@ -46,13 +45,20 @@
       <div class='center'>
         <h2>About me</h2>
         <p>
-          I am The Jack Papel. I enjoy <span class='highlight'>Jack Papeling</span>.
+          I'm a <span class='highlight'>developer</span>, 
+          <span class='highlight'>designer</span>, 
+          <span class='highlight'>mathematician</span>, 
+          and a <span class='highlight'>performer</span>.
+          I'm interested in providing accessible and engaging experiences via code, as well as
+          learning as much as I can, and teaching others.
+          <br><br>
+          This website is still under construction for the moment, so I'll have much more to share in the future!
         </p>
       </div>
     </section>
     <section id='portfolio'>
       <div class='center'>
-        <h2>Portfolio</h2>
+        <h2>Port&shy;folio</h2>
         <p>
           Here is a list of projects I've been working on:
         </p>
@@ -72,7 +78,7 @@
             <h1>Mafia</h1>
           </header>
           <div>
-            Online social deduction game.<br>
+            Online social deduction game.
             Requires deception and critical thinking to win.
           </div>
           <footer>Rust Backend &bull; Websockets &bull; Frontend &bull; TS &bull; React &bull; Github Actions</footer>
@@ -82,12 +88,13 @@
             <h1>Mlang</h1>
           </header>
           <div>
-            Interpreted programming language.<br>
-            Ergonomic iteration and pattern matching.<br>
-            Online playground (currently offline).
+            Interpreted programming language.
+            Ergonomic iteration and pattern matching.
+            Online playground.
           </div>
           <footer>Rust &bull; ASTs &bull; Token Parsing &bull; Yew &bull; WebAssembly &bull; HTML &bull; CSS </footer>
         </article>
+        <!--
         <article id='critical-shears-card' style='--weight: 0.3'>
           <header>
             <h1>Critical Shears</h1>
@@ -107,12 +114,13 @@
           </div>
           <footer>Rust &bull; LLVM &bull; ASTs &bull; Token Parsing &bull; TBD</footer>
         </article>
+        -->
       </div>
     </section>
     <section id='under-construction'>
       <div class='center'>
         <h2>
-          Under Construction
+          Under Construc&shy;tion
         </h2>
         <p>
           This website is still under construction. Information about my experience and skills, 
