--- a/mlang-online-playground/index.html
+++ b/mlang-online-playground/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
-    
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="preload" href="./mlang-yew.wasm" as="fetch" type="application/wasm" crossorigin="">
     <link rel="modulepreload" href="./mlang-yew.js">
