--- a/mlang-online-playground/index.html
+++ b/mlang-online-playground/index.html
@@ -8,7 +8,9 @@
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
 
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://www.jackpapel.com/src/elements.css"/>
+    <link rel="stylesheet" href="https://www.jackpapel.com/src/classes.css"/>
+    <link rel="stylesheet" href="./styles.css"/>
     <link rel="preload" href="./mlang-yew.wasm" as="fetch" type="application/wasm" crossorigin="">
     <link rel="modulepreload" href="./mlang-yew.js">
     
