--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
   <script src="./src/index.js"></script>
+  <title>Jack Papel</title>
+  <meta name="author" content="Jack Papel" />
+  <meta
+    name="description"
+    content="A student and full-stack developer interested in providing engaging and accessible experiences through code." />
 </head>
 
 <body>
