--- a/mlang-online-playground/index.html
+++ b/mlang-online-playground/index.html
@@ -18,7 +18,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cousine&display=swap" rel="stylesheet"> 
-    <title>Jack Papel Mlang</title>
+    <title>Jack Papel Mlang Online Playground</title>
+    <meta name="author" content="Jack Papel" />
+    <meta
+        name="description"
+        content="Online playground for an interpreted programming language with ergonomic iteration and pattern matching." />
 </head>
 
 <body>
