Update link to mafia

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <footer>HTML &bull; CSS &bull; JS &bull; Github Actions</footer>
         </article>
-        <article id='mafia-card' href='https://mafia.mom'>
+        <article id='mafia-card' href='https://mafia.jackpapel.com'>
           <header>
             <h1>Mafia</h1>
           </header>
