Rename Mafia to Midnight Machinations

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         </article>
         <article id='mafia-card' href='https://mafia.jackpapel.com'>
           <header>
-            <h1>Mafia</h1>
+            <h1>Midnight Machinations</h1>
           </header>
           <div>
             Online social deduction game.
             Requires deception and critical thinking to win.
           </div>
-          <footer>Rust Backend &bull; Websockets &bull; Frontend &bull; TS &bull; React &bull; Github Actions</footer>
+          <footer>Rust Backend &bull; Websockets &bull; TS Frontend &bull; React &bull; Github Actions</footer>
         </article>
         <article id='mlang-card' href='mlang-online-playground/'>
           <header>
